# RootingNetworks

./: CHANGELOG.md  CONTRIBUTING.md  Example1-Components.txt  Example2-PetersenOneLeaf.txt  Example2.1-PetersenTwoLeaves.txt  Example4.1-BigExampleFromPaperFewerLeaves.txt  Example4.2-BigExampleFromPaperReduced.txt  Network_rootability.py  README.md  Rooting.py  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: python-package.yml  release.yml
examples/: Example3-StackFree.txt  Example4-BigExampleFromPaper.txt
src/phyloroot/: Example5-Subtrees.txt  __init__.py  chain_reduction.py  constrained_orientation.py  main_cli.py  network_rootability.py  rooting.py  rooting_exponential.py  rooting_fpt_level.py  rooting_fpt_reticulation_number.py
src/phyloroot/class_checkers/: __init__.py  all.py  orchard.py  stack_free.py  tree.py  tree_based.py  tree_child.py
tests/: expected_outcomes.py  test_examples.py
