[build-system]
requires = [
    "setuptools>=61.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "phyloroot"
version = "1.0.0"
authors = [
  { name="Remie Janssen", email="remiejanssen92@gmail.com" },
]
description = "A package for orienting phylogenetic networks in several well-known classes."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "networkx>=2.6",
]


[project.urls]
"Homepage" = "https://github.com/RemieJanssen/RootingNetworks"
"Bug Tracker" = "https://github.com/RemieJanssen/RootingNetworks/issues"

[project.scripts]
phyloroot = "phyloroot.main_cli:main"
